--- a/1_21.ipynb
+++ b/1_21.ipynb
@@ -54,33 +54,243 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "60a68807",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "tensor(0.3416, device='cuda:0', grad_fn=<MaxBackward1>)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (539869422.py, line 96)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 96\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31my_true = (x_v.abs() > 0.5).float()\u001b[39m\n    ^\n\u001b[31mIndentationError\u001b[39m\u001b[31m:\u001b[39m unexpected indent\n"
+     ]
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "import torch\n",
-    "from model.basic_vae_1 import MultiDecoderCondVAE\n",
-    "train_loader=  torch.load('torch/train_loader.pt',weights_only=False)\n",
-    "x_sample, c_sample = next(iter(train_loader))\n",
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "model = MultiDecoderCondVAE(x_dim=x_sample.shape[1], c_dim=c_sample.shape[1]).to(device)\n",
-    "for x,c in train_loader:\n",
-    "    x = x.to(device)\n",
-    "    c = c.to(device)\n",
-    "    m_logits,r_num,mu,logvar = model(x,c)\n",
-    "m_logits.max()"
+    "import torch.optim as optim\n",
+    "from torch.utils.data import TensorDataset, DataLoader\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import precision_score, recall_score, f1_score, accuracy_score\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# 사용자 정의 모듈 (환경에 맞게 경로 확인 필요)\n",
+    "from model.basic_1_22 import MultiDecoderCondVAE, integrated_loss_fn\n",
+    "from vae_earlystopping import EarlyStopping\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "# --- 실험 설정 ---\n",
+    "num_experiments = 1\n",
+    "seeds = np.random.randint(1, 10000, size=num_experiments)\n",
+    "best_results = []\n",
+    "best_val_so_far = float('inf')\n",
+    "final_best_history = None \n",
+    "final_best_seed = None\n",
+    "\n",
+    "# 임계값 설정 (분류 지표 계산용)\n",
+    "threshold = 0.5 \n",
+    "f1_results = []\n",
+    "for idx, n in enumerate(seeds):\n",
+    "    print(f\"\\n>>> [{idx+1}/{num_experiments}] Experiment with Seed: {n}\")\n",
+    "    \n",
+    "    # 1. 데이터 로드 및 분할\n",
+    "    x_data = np.load('./data/metal.npy')\n",
+    "    c_data = np.load('./data/reaction.npy')\n",
+    "    x_train, x_test, c_train, c_test = train_test_split(x_data, c_data, random_state=n, test_size=0.4)\n",
+    "    x_val, x_test, c_val, c_test = train_test_split(x_test, c_test, random_state=n, test_size=0.5)\n",
+    "\n",
+    "    # 2. 스케일링\n",
+    "    x_scaler, c_scaler = StandardScaler(), StandardScaler()\n",
+    "    x_train = x_scaler.fit_transform(x_train)\n",
+    "    c_train = c_scaler.fit_transform(c_train)\n",
+    "    x_val, x_test = [x_scaler.transform(x) for x in [x_val, x_test]]\n",
+    "    c_val, c_test = [c_scaler.transform(c) for c in [c_val, c_test]]\n",
+    "\n",
+    "    # 3. 텐서 변환 및 로더\n",
+    "    x_train, x_val, x_test = [torch.tensor(x, dtype=torch.float32) for x in [x_train, x_val, x_test]]\n",
+    "    c_train, c_val, c_test = [torch.tensor(c, dtype=torch.float32) for c in [c_train, c_val, c_test]]\n",
+    "\n",
+    "    train_loader = DataLoader(TensorDataset(x_train, c_train), batch_size=64, shuffle=True)\n",
+    "    val_loader = DataLoader(TensorDataset(x_val, c_val), batch_size=64, shuffle=False)\n",
+    "\n",
+    "    # 4. 모델 초기화\n",
+    "    model = MultiDecoderCondVAE(x_dim=x_train.shape[1], c_dim=c_train.shape[1]).to(device)\n",
+    "    early_stopping = EarlyStopping(patience=40, min_delta=1e-9)\n",
+    "    optimizer = optim.Adam(model.parameters(), lr=1e-3, weight_decay=1e-5)\n",
+    "\n",
+    "    def get_beta_cyclical(epoch, total_epochs, n_cycles=4, beta_max=0.01):\n",
+    "        cycle_len = total_epochs // n_cycles\n",
+    "        relative_epoch = epoch % cycle_len\n",
+    "        return min(beta_max, (relative_epoch / (cycle_len * 0.5)) * beta_max)\n",
+    "\n",
+    "    # --- 히스토리 저장용 리스트 (에포크 루프 밖에서 초기화) ---\n",
+    "    current_history = {'train': [], 'val': [], 'precision': [], 'recall': [], 'f1': [], 'accuracy': []}\n",
+    "    epochs = 300\n",
+    "\n",
+    "    for epoch in range(1, epochs + 1):\n",
+    "        # [Train]\n",
+    "        model.train()\n",
+    "        t_loss = 0\n",
+    "        beta = get_beta_cyclical(epoch, epochs)\n",
+    "        for x, c in train_loader:\n",
+    "            x, c = x.to(device), c.to(device)\n",
+    "            optimizer.zero_grad()\n",
+    "            mask_logits, prob_mask, mask_out, recon_numeric, z_mu, z_logvar = model(x, c)\n",
+    "            loss_dict = integrated_loss_fn(mask_logits, recon_numeric, x, z_mu, z_logvar, beta=beta)\n",
+    "            loss_dict['loss'].backward()\n",
+    "            optimizer.step()\n",
+    "            t_loss += loss_dict['loss'].item()\n",
+    "\n",
+    "        # [Validation & Metrics]\n",
+    "        model.eval()\n",
+    "        v_loss = 0\n",
+    "        y_true_all, y_pred_all = [], []\n",
+    "        \n",
+    "        with torch.no_grad():\n",
+    "            for x_v, c_v in val_loader:\n",
+    "                x_v, c_v = x_v.to(device), c_v.to(device)\n",
+    "                v_mask_logits, _, _, v_recon_numeric, v_mu, v_logvar = model(x_v, c_v)\n",
+    "                preds = (torch.sigmoid(v_mask_logits) > 0.5).float().cpu().numpy()\n",
+    "                labels = x_val.cpu().numpy() # 실제 데이터의 Mask 기준 (필요시 수정)\n",
+    "                v_loss_dict = integrated_loss_fn(v_mask_logits, v_recon_numeric, x_v, v_mu, v_logvar, beta=beta)\n",
+    "                v_loss += v_loss_dict['loss'].item()\n",
+    "                current_f1 = f1_score(labels.flatten(), preds.flatten(), average='macro')\n",
+    "            f1_results.append({'seed': n, 'f1_score': current_f1})\n",
+    "\n",
+    "                y_true = (x_v.abs() > 0.5).float()\n",
+    "                y_prob = torch.sigmoid(v_mask_logits)\n",
+    "                y_pred = (y_prob >= threshold).float()\n",
+    "\n",
+    "                y_true_all.append(y_true.cpu().numpy().ravel())\n",
+    "                y_pred_all.append(y_pred.cpu().numpy().ravel())\n",
+    "\n",
+    "        # 에포크 결과 계산\n",
+    "        avg_train = t_loss / len(train_loader)\n",
+    "        avg_val = v_loss / len(val_loader)\n",
+    "        \n",
+    "        y_true_final = np.concatenate(y_true_all)\n",
+    "        y_pred_final = np.concatenate(y_pred_all)\n",
+    "        \n",
+    "        prec = precision_score(y_true_final, y_pred_final, average='micro', zero_division=0)\n",
+    "        rec  = recall_score(y_true_final, y_pred_final, average='micro', zero_division=0)\n",
+    "        f1   = f1_score(y_true_final, y_pred_final, average='micro', zero_division=0)\n",
+    "        acc  = accuracy_score(y_true_final, y_pred_final)\n",
+    "\n",
+    "        # 히스토리 업데이트\n",
+    "        current_history['train'].append(avg_train)\n",
+    "        current_history['val'].append(avg_val)\n",
+    "        current_history['precision'].append(prec)\n",
+    "        current_history['recall'].append(rec)\n",
+    "        current_history['f1'].append(f1)\n",
+    "        current_history['accuracy'].append(acc)\n",
+    "\n",
+    "        if early_stopping(avg_val, model):\n",
+    "            print(f\"Early Stopping at epoch {epoch}\")\n",
+    "            break\n",
+    "\n",
+    "    # --- 최적 실험 정보 업데이트 ---\n",
+    "    min_val_loss = early_stopping.best_score if hasattr(early_stopping, 'best_score') else avg_val\n",
+    "    best_results.append({'seed': n, 'min_val_loss': min_val_loss})\n",
+    "\n",
+    "    if min_val_loss < best_val_so_far:\n",
+    "        best_val_so_far = min_val_loss\n",
+    "        final_best_history = {k: v[:] for k, v in current_history.items()} # Deep copy\n",
+    "        final_best_seed = n\n",
+    "\n",
+    "# ================= 최종 시각화 파트 =================\n",
+    "res_df = pd.DataFrame(best_results)\n",
+    "sns.set_style(\"whitegrid\")\n",
+    "plt.figure(figsize=(20, 6))\n",
+    "\n",
+    "# 1. 시드별 성능 분포 (Stability 확인)\n",
+    "plt.subplot(1, 3, 1)\n",
+    "sns.boxplot(data=res_df, y='min_val_loss', color='#3498db', width=0.3)\n",
+    "sns.stripplot(data=res_df, y='min_val_loss', color='#e74c3c', size=6, jitter=True, alpha=0.6)\n",
+    "plt.title(f'Model Stability ({num_experiments} Seeds)\\nBest Seed: {final_best_seed}', fontsize=13)\n",
+    "\n",
+    "# 2. 최적 시드의 Loss 곡선\n",
+    "plt.subplot(1, 3, 2)\n",
+    "plt.plot(final_best_history['train'], label='Train Loss', color='#2ecc71', lw=2)\n",
+    "plt.plot(final_best_history['val'], label='Val Loss', color='#e67e22', lw=2)\n",
+    "plt.title(f'Loss Curve\\n(Seed: {final_best_seed})', fontsize=13)\n",
+    "plt.xlabel('Epochs')\n",
+    "plt.legend()\n",
+    "\n",
+    "# 3. 최적 시드의 4대 평가지표 곡선\n",
+    "plt.subplot(1, 3, 3)\n",
+    "h = final_best_history\n",
+    "plt.plot(h['precision'], label='Precision', linestyle='--', alpha=0.7)\n",
+    "plt.plot(h['recall'], label='Recall', linestyle='--', alpha=0.7)\n",
+    "plt.plot(h['f1'], label='F1-score', lw=3, color='#9b59b6')\n",
+    "plt.plot(h['accuracy'], label='Accuracy', lw=1.5, color='#2c3e50')\n",
+    "plt.title(f'Evaluation Metrics\\n(Seed: {final_best_seed})', fontsize=13)\n",
+    "plt.xlabel('Epochs')\n",
+    "plt.ylabel('Score')\n",
+    "plt.ylim(0, 1.05)\n",
+    "plt.legend(loc='lower right')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "print(f\"\\n[실험 종료] 최적 시드: {final_best_seed} | 최저 검증 손실: {best_val_so_far:.6f}\")\n",
+    "f1_df = pd.DataFrame(f1_results)\n",
+    "\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "sns.set_style(\"whitegrid\")\n",
+    "\n",
+    "# Boxplot: 분포의 사분위수 확인\n",
+    "sns.boxplot(data=f1_df, y='f1_score', color='#9b59b6', width=0.3)\n",
+    "\n",
+    "# Stripplot: 개별 시드별 점 (어떤 시드가 유독 낮거나 높은지 확인)\n",
+    "sns.stripplot(data=f1_df, y='f1_score', color='#34495e', size=10, jitter=True, alpha=0.8)\n",
+    "\n",
+    "# 평균선 추가\n",
+    "plt.axhline(f1_df['f1_score'].mean(), color='red', linestyle='--', label=f'Mean: {f1_df[\"f1_score\"].mean():.4f}')\n",
+    "\n",
+    "plt.title('Distribution of F1-scores across 10 Seeds', fontsize=14)\n",
+    "plt.ylabel('F1-score (Macro)')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cf57a7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(18, 5))\n",
+    "\n",
+    "# Plot 1: Loss (BCE)\n",
+    "plt.subplot(1, 3, 1)\n",
+    "plt.plot(history['train_loss'], label='Train Loss', color='blue')\n",
+    "plt.plot(history['val_loss'], label='Val Loss', color='orange')\n",
+    "plt.title('BCE Loss Evolution')\n",
+    "plt.legend()\n",
+    "\n",
+    "# Plot 2: Accuracy\n",
+    "plt.subplot(1, 3, 2)\n",
+    "plt.plot(history['train_acc'], label='Train Acc', color='green')\n",
+    "plt.plot(history['val_acc'], label='Val Acc', color='red')\n",
+    "plt.title('Accuracy Trend')\n",
+    "plt.legend()\n",
+    "\n",
+    "# Plot 3: F1-score\n",
+    "plt.subplot(1, 3, 3)\n",
+    "plt.plot(history['train_f1'], label='Train F1', color='purple')\n",
+    "plt.plot(history['val_f1'], label='Val F1', color='brown')\n",
+    "plt.title('F1-score Trend')\n",
+    "plt.legend()\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   }
  ],
