--- a/data_2preprocessing.ipynb
+++ b/data_2preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "a0b225a2",
    "metadata": {},
    "outputs": [],
@@ -10,18 +10,6 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import joblib"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "b6e6a7cf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_data = np.load('./data/metal.npy')\n",
-    "c_data = np.load('./data/reaction.npy')\n",
-    "s_data = np.load('./data/support.npy')"
    ]
   },
   {
@@ -35,70 +23,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "bad72b39",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "x_train,x_test,c_train,c_test,s_train,s_test = train_test_split(x_data,c_data,s_data, random_state = 21,test_size = 0.4)\n",
-    "x_val,x_test,c_val,c_test,s_val,s_test = train_test_split(x_test,c_test,s_testrandom_state = 21, test_size = 0.5)"
+    "x_train,x_test,c_train,c_test = train_test_split(x_data,c_data,random_state = 21,test_size = 0.4)\n",
+    "x_val,x_test,c_val,c_test = train_test_split(x_test,c_test,random_state = 21, test_size = 0.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "ef5faa1b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# x_train,x_val,x_test = [np.log1p(x) for x in [x_train,x_val,x_test]]\n",
-    "# c_train,c_val,c_test = [np.log1p(x) for x in [c_train,c_val,c_test]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d5b4db89",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import StandardScaler\n",
-    "x_scaler = StandardScaler()\n",
-    "c_scaler = StandardScaler()\n",
-    "s_scaler = StandardScaler()\n",
-    "x_train = x_scaler.fit_transform(x_train)\n",
-    "c_train = c_scaler.fit_transform(c_train)\n",
-    "x_val,x_test = [x_scaler.transform(x) for x in [x_val,x_test]]\n",
-    "c_val,c_test = [c_scaler.transform(c) for c in [c_val,c_test]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "4455bef2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['./torch/c_scaler.pkl']"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# import joblib \n",
-    "joblib.dump(x_scaler,'./torch/x_scaler.pkl')\n",
-    "joblib.dump(c_scaler,'./torch/c_scaler.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "id": "44443f53",
    "metadata": {},
    "outputs": [],
@@ -110,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "id": "e592e814",
    "metadata": {},
    "outputs": [],
@@ -126,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "id": "a6a82980",
    "metadata": {},
    "outputs": [],
@@ -137,16 +74,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "id": "fa2bc408",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "os.makedirs('torch',exist_ok = True)\n",
-    "torch.save(train_loader,\"torch/train_loader.pt\")\n",
-    "torch.save(val_loader,\"torch/val_loader.pt\")\n",
-    "torch.save(test_loader,\"torch/test_loader.pt\")"
+    "torch.save(train_loader,\"torch/train_loader_1.pt\")\n",
+    "torch.save(val_loader,\"torch/val_loader_1.pt\")\n",
+    "torch.save(test_loader,\"torch/test_loader_1.pt\")"
    ]
   }
  ],
