--- a/preprocessing2.ipynb
+++ b/preprocessing2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "a0b225a2",
    "metadata": {},
    "outputs": [],
@@ -14,14 +14,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "b6e6a7cf",
    "metadata": {},
    "outputs": [],
    "source": [
     "x_data = np.load('./data/metal.npy')\n",
-    "c_data = np.load('./data/reaction.npy')\n",
-    "s_data = np.load('./data/support.npy')"
+    "c_data = np.load('./data/reaction.npy')"
    ]
   },
   {
@@ -29,20 +28,19 @@
    "id": "ed38d1d2",
    "metadata": {},
    "source": [
-    "### train_test_split을 활용해 데이터를 train,val,test로 해서 0.6,0.2,0.2로 나눠서 구분\n",
-    "- random_state = 21로 설정"
+    "#### train_test_split을 활용해 데이터를 train,val,test로 해서 0.6,0.2,0.2로 나눠서 구분\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "bad72b39",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "x_train,x_test,c_train,c_test,s_train,s_test = train_test_split(x_data,c_data,s_data, random_state = 21,test_size = 0.4)\n",
-    "x_val,x_test,c_val,c_test,s_val,s_test = train_test_split(x_test,c_test,s_testrandom_state = 21, test_size = 0.5)"
+    "x_train,x_test,c_train,c_test = train_test_split(x_data,c_data,random_state = 21,test_size = 0.4)\n",
+    "x_val,x_test,c_val,c_test = train_test_split(x_test,c_test,random_state = 21, test_size = 0.5)"
    ]
   },
   {
@@ -58,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "d5b4db89",
    "metadata": {},
    "outputs": [],
@@ -66,7 +64,6 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "x_scaler = StandardScaler()\n",
     "c_scaler = StandardScaler()\n",
-    "s_scaler = StandardScaler()\n",
     "x_train = x_scaler.fit_transform(x_train)\n",
     "c_train = c_scaler.fit_transform(c_train)\n",
     "x_val,x_test = [x_scaler.transform(x) for x in [x_val,x_test]]\n",
