--- a/data_1preprocessing_1.ipynb
+++ b/data_1preprocessing_1.ipynb
@@ -146,6 +146,37 @@
     "torch.save(val_loader,\"torch/val_loader_1.pt\")\n",
     "torch.save(test_loader,\"torch/test_loader_1.pt\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a4a72670",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "53fa4a92",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 9, 13, 35, 25, 13, 18, 39,  5, 31, 15], dtype=int32)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.randint(1,45,size =10)"
+   ]
   }
  ],
  "metadata": {
